Revision history for Perl extension PGXN::API

0.5.3

0.5.2   2011-03-15T22:23:56
      - HTML documents are now properly written out at UTF-8, instead of as
        raw bytes.
      - The doc parser no longer autovivifies doc file names into the
        "provides" has of the version metadata file.

0.5.1   2011-03-15T21:44:07
      - The sync code now updates the mirror meta after `rsync`ing but before
        doing anything else. It was fetching a template first, and this caused
        errors on the first sync because the `index.json` had not yet been
        copied to the document root.

0.5.0   2011-03-15T21:24:59
      - The URI templates are now read from the doc root rather than the
        mirror root, so that the API-specific templates stored there will be
        visible to the app.
      - Added documentation parsing. Docs are read by Text::Markup and
        converted to HTML. The HTML is cleaned up, unwanted stuff removed, and
        a table of contents added. They are then written to a file represented
        by the new "doc" URI template. They are also listed in the versioned
        distribution metadata, suitable for for formatting into a URI via the
        template. README files are included in this formatting treatment.

0.4.1   2011-03-11T23:42:38
      - Fixed a bug introduced in 0.4.0 where the /by/user and /by/tag files
        were overwriting release data from other distributions, thereby
        removing their abstracts. We now update the release data only for the
        currently-processing distribution.

0.4.0   2011-03-11T23:23:12
      - Added the "special_files" key to the distribution metadata file. It
        includes paths to `README`, `META.json`, `Changes`, `Makefile`, and
        other special files in the distribution.
      - Moved unzipped source directories under a subdirectory named for the
        distribution. That is, rather than `/src/pair-0.1.1/`, we now have
        `/src/pair/pair-0.1.1/`.