@@ -2,8 +2,8 @@
 
 use strict;
 use warnings;
-#use Test::More tests => 98;
-use Test::More 'no_plan';
+use Test::More tests => 115;
+#use Test::More 'no_plan';
 use File::Copy::Recursive qw(dircopy fcopy);
 use File::Path qw(remove_tree);
 use File::Spec::Functions qw(catfile catdir rel2abs);
@@ -54,7 +54,7 @@ file_exists_ok catfile($doc_root, qw(meta/mirrors.json)), 'mirrors.json should n
 # Make sure it has all the templates we need.
 my $tmpl = $api->read_json_from(catfile qw(t root index.json));
 $tmpl->{source} = "/src/{dist}/{dist}-{version}/";
-$tmpl->{doc} = "/dist/{dist}/{dist}-{version}/{doc}.html";
+$tmpl->{doc} = "/dist/{dist}/{dist}-{version}/{+path}.html";
 is_deeply $api->read_json_from(catfile($doc_root, qw(index.json))), $tmpl,
     'index.json should have additional templates';
 
