@@ -1,6 +1,10 @@
 Revision history for Perl extension PGXN::API
 
 0.5.3
+      - Changed doc template to use `{+doc}` instead of `{doc}`, so that
+        slashes will not be encoded. This isn't strictly-speaking supported by
+        URI::Template yet, so for now we set the variable as "+doc" and
+        prevent URI::Escape from escaping slashes.
 
 0.5.2   2011-03-15T22:23:56
       - HTML documents are now properly written out at UTF-8, instead of as
